--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
+  #Firestore Database
+  cloud_firestore: ^3.4.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: 
-
+  google_fonts:
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
