--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts:
   firebase_auth: ^3.9.0
+  firebase_core: ^1.23.0
   
 dev_dependencies:
   flutter_test:
