--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,12 +77,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Comfortaa
+      fonts:
+        - asset: fonts/Comfortaa-Bold.ttf
+        - asset: fonts/Comfortaa-Light.ttf
+        - asset: fonts/Comfortaa-Medium.ttf
+        - asset: fonts/Comfortaa-Regular.ttf
+        - asset: fonts/Comfortaa-SemiBold.ttf
+
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
