--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts:
+  firebase_database: ^9.0.20
   firebase_auth: ^3.9.0
   firebase_core: ^1.23.0
+  fluttertoast: ^8.0.8
   
 dev_dependencies:
   flutter_test:
