--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_auth: ^3.9.0
   firebase_core: ^1.23.0
   fluttertoast: ^8.0.8
+  google_maps_flutter: ^2.2.1
+  flutter_polyline_points: ^1.0.0
+  dio: ^4.0.6
   
 dev_dependencies:
   flutter_test:
