--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   google_maps_flutter: ^2.2.1
   flutter_polyline_points: ^1.0.0
   dio: ^4.0.6
+  flutter_svg: ^1.1.6
+  http: ^0.13.5
   
 dev_dependencies:
   flutter_test:
