--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   google_maps_flutter: ^2.2.1
   flutter_polyline_points: ^1.0.0
   dio: ^4.0.6
+  url_launcher: ^6.1.7 #liga indiretamente para o numero
+  flutter_phone_direct_caller: ^2.1.1 #liga diretamente para o numero
+  flutter_rating_bar: ^4.0.1 #permite usar o widget de estrelas
   
 dev_dependencies:
   flutter_test:
