--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,15 @@ dependencies:
   dio: ^4.0.6
   flutter_phone_direct_caller: ^2.1.1
   flutter_rating_bar: ^4.0.1
+  provider: ^5.0.0
 
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:           
+    sdk: flutter            
+  test: ^1.14.4 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
