--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,24 +29,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_place: ^0.4.7
+    
     
   #Firestore Database
-  cloud_firestore: ^3.4.8
+  cloud_firestore: ^4.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts:
-  firebase_database: ^9.0.20
-  firebase_auth: ^3.9.0
-  firebase_core: ^1.23.0
+  firebase_database: ^10.0.9
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
   fluttertoast: ^8.0.8
   google_maps_flutter: ^2.2.1
   flutter_polyline_points: ^1.0.0
   dio: ^4.0.6
   flutter_phone_direct_caller: ^2.1.1
   flutter_rating_bar: ^4.0.1
-  provider: ^5.0.0
+  provider: ^6.0.5
 
   
 dev_dependencies:
