--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts:
+
+  # Firebase
   firebase_database: ^10.0.9
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
@@ -50,6 +52,8 @@ dependencies:
   provider: ^6.0.5
   http: ^0.13.5
   geolocator: ^9.0.2
+  get: ^4.6.5
+  geoflutterfire2: ^2.3.14
 
   
 dev_dependencies:
@@ -79,9 +83,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/bus_home.png
-    - images/profile.jpg
-  #   - images/a_dot_ham.jpeg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
