--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   fluttertoast: ^8.0.8
   google_maps_flutter: ^2.2.3
   flutter_polyline_points: ^1.0.0
-  dio: ^4.0.6
+  dio: ^5.2.1+1
   flutter_phone_direct_caller: ^2.1.1
   flutter_rating_bar: ^4.0.1
   provider: ^6.0.5
