--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,13 @@ dev_dependencies:
   integration_test:           
     sdk: flutter            
   test: ^1.14.4 
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
